src/objects/ERP_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Bar_color__c</fullName>
        <defaultValue>&quot;#FF9933,#A700DF,#369E2B&quot;</defaultValue>
        <inlineHelpText>Give the web color for each type in the ERP chart 
Separated with comma. 
eg. #1223344,#112244,#335566</inlineHelpText>
        <label>Bar color</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_performance_type__c</fullName>
        <label>ERP performance type</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Performance, general</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Performance, project</fullName>
            </value>
            <value>
                <fullName>Performance, marketing activity</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Performance, costcenter</fullName>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expression_business_area__c</fullName>
        <inlineHelpText>Here you can enter which business areas to be included for the selected milestone, one row for each area</inlineHelpText>
        <label>Expression business area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expression_business_region__c</fullName>
        <inlineHelpText>Here you can enter which business regions to be included for the selected milestone, one row for each region</inlineHelpText>
        <label>Expression business region</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selector__c</fullName>
        <inlineHelpText>Select which field you will spit in Gantt view. (Business area or Business region)</inlineHelpText>
        <label>Selector</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Business area</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Business region</fullName>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>erp_Chart__c</fullName>
        <label>Chart</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Area charts</fullName>
            </value>
            <value>
                <fullName>Line charts</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Spline charts</fullName>
            </value>
            <value>
                <fullName>Stacked Bar</fullName>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <label>ERP Settings</label>
    <nameField>
        <label>Settings name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>